# -Latinas-Intro-a-Ciencia-de-Datos

./: .gitignore  README.md  clase_01_ecosistema_y_tipos_de_datos.ipynb  clase_02_almacenamiento_y_exploracion.ipynb  clase_03_limpieza_y_preparacion.ipynb  clase_04_eda_y_checkpoint.ipynb  main.py  pyproject.toml
data/: get_mashroom_dataset.py
data/mushroom-classification/: mushroom-classification-metadata.json  notas-dataset.md
