[project]
name = "latinas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib<3.11",
    "mlcroissant>=1.0.22",
    "numpy<2.4",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "seaborn<0.13",
    "ydata-profiling",
]
